<resources>
    <string name="app_name">AndroidSensorsTest</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main_window">MainWindow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_battery">Battery</string>
    <string name="menu_light">Light</string>
    <string name="menu_wifi">Wifi</string>
    <string name="menu_accelerometer">Accelerometer</string>
    <string name="menu_gyroscope">Gyroscope</string>
    <string name="menu_gps">GPS</string>
    <string name="menu_pressure">Pressure</string>
    <string name="menu_proximity">Proximity</string>
    <string name="menu_linear_accelerometer">Linear Accelerometer</string>
    <string name="menu_magnetic_field">Magnetic Field</string>
    <string name="menu_gravity">Gravity</string>
    <string name="menu_rotation_vector">Rotation Vector</string>
    <string name="menu_ambient_temperature">Ambient Temperature</string>
    <string name="menu_orientation">Orientation</string>
    <string name="menu_step_counter">Step Counter</string>
</resources>
