<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_battery"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_battery" />
        <item
            android:id="@+id/nav_light"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_light" />
        <item
            android:id="@+id/nav_wifi"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_wifi" />
        <item
            android:id="@+id/nav_accelerometer"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_accelerometer" />
        <item
            android:id="@+id/nav_gyroscope"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_gyroscope" />
        <item
            android:id="@+id/nav_gps"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_gps" />
        <item
            android:id="@+id/nav_pressure"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_pressure" />
        <item
            android:id="@+id/nav_proximity"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_proximity" />
        <item
            android:id="@+id/nav_linear_accelerometer"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_linear_accelerometer" />
        <item
            android:id="@+id/nav_magnetic_field"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_magnetic_field" />
        <item
            android:id="@+id/nav_gravity"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_gravity" />
        <item
            android:id="@+id/nav_rotation_vector"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_rotation_vector" />
        <item
            android:id="@+id/nav_ambient_temperature"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_ambient_temperature" />
        <item
            android:id="@+id/nav_orientation"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_orientation" />
        <item
            android:id="@+id/nav_step_counter"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_step_counter" />
    </group>



</menu>
